; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/quartz/extr_mpegsplit.c_MPEGSplitter_create.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/quartz/extr_mpegsplit.c_MPEGSplitter_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_11__, i32, %struct.TYPE_8__ }
%struct.TYPE_11__ = type { %struct.TYPE_9__ }
%struct.TYPE_9__ = type { i32 }
%struct.TYPE_8__ = type { i32* }

@E_FAIL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"(%p, %p)\0A\00", align 1
@CLASS_E_NOAGGREGATION = common dso_local global i32 0, align 4
@E_OUTOFMEMORY = common dso_local global i32 0, align 4
@MPEGSplitter_Vtbl = common dso_local global i32 0, align 4
@CLSID_MPEG1Splitter = common dso_local global i32 0, align 4
@MPEGSplitter_process_sample = common dso_local global i32 0, align 4
@MPEGSplitter_query_accept = common dso_local global i32 0, align 4
@MPEGSplitter_pre_connect = common dso_local global i32 0, align 4
@MPEGSplitter_cleanup = common dso_local global i32 0, align 4
@MPEGSplitter_disconnect = common dso_local global i32 0, align 4
@MPEGSplitter_first_request = common dso_local global i32 0, align 4
@MPEGSplitter_seek = common dso_local global i32 0, align 4
@AMStreamSelectVtbl = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @MPEGSplitter_create(i32* %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca %struct.TYPE_10__*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32** %1, i32*** %5, align 8
  %8 = load i32, i32* @E_FAIL, align 4
  store i32 %8, i32* %7, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = load i32**, i32*** %5, align 8
  %11 = call i32 @TRACE(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32* %9, i32** %10)
  %12 = load i32**, i32*** %5, align 8
  store i32* null, i32** %12, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = load i32, i32* @CLASS_E_NOAGGREGATION, align 4
  store i32 %16, i32* %3, align 4
  br label %56

17:                                               ; preds = %2
  %18 = call %struct.TYPE_10__* @CoTaskMemAlloc(i32 16)
  store %struct.TYPE_10__* %18, %struct.TYPE_10__** %6, align 8
  %19 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %20 = icmp ne %struct.TYPE_10__* %19, null
  br i1 %20, label %23, label %21

21:                                               ; preds = %17
  %22 = load i32, i32* @E_OUTOFMEMORY, align 4
  store i32 %22, i32* %3, align 4
  br label %56

23:                                               ; preds = %17
  %24 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %25 = call i32 @ZeroMemory(%struct.TYPE_10__* %24, i32 16)
  %26 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %27 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %26, i32 0, i32 0
  %28 = load i32, i32* @MPEGSplitter_process_sample, align 4
  %29 = load i32, i32* @MPEGSplitter_query_accept, align 4
  %30 = load i32, i32* @MPEGSplitter_pre_connect, align 4
  %31 = load i32, i32* @MPEGSplitter_cleanup, align 4
  %32 = load i32, i32* @MPEGSplitter_disconnect, align 4
  %33 = load i32, i32* @MPEGSplitter_first_request, align 4
  %34 = load i32, i32* @MPEGSplitter_seek, align 4
  %35 = call i32 @Parser_Create(%struct.TYPE_11__* %27, i32* @MPEGSplitter_Vtbl, i32* @CLSID_MPEG1Splitter, i32 %28, i32 %29, i32 %30, i32 %31, i32 %32, i32 %33, i32* null, i32* null, i32 %34, i32* null)
  store i32 %35, i32* %7, align 4
  %36 = load i32, i32* %7, align 4
  %37 = call i64 @FAILED(i32 %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %43

39:                                               ; preds = %23
  %40 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %41 = call i32 @CoTaskMemFree(%struct.TYPE_10__* %40)
  %42 = load i32, i32* %7, align 4
  store i32 %42, i32* %3, align 4
  br label %56

43:                                               ; preds = %23
  %44 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %45 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %44, i32 0, i32 2
  %46 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %45, i32 0, i32 0
  store i32* @AMStreamSelectVtbl, i32** %46, align 8
  %47 = load i32, i32* @TRUE, align 4
  %48 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %49 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %48, i32 0, i32 1
  store i32 %47, i32* %49, align 4
  %50 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %51 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %50, i32 0, i32 0
  %52 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %51, i32 0, i32 0
  %53 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %52, i32 0, i32 0
  %54 = load i32**, i32*** %5, align 8
  store i32* %53, i32** %54, align 8
  %55 = load i32, i32* %7, align 4
  store i32 %55, i32* %3, align 4
  br label %56

56:                                               ; preds = %43, %39, %21, %15
  %57 = load i32, i32* %3, align 4
  ret i32 %57
}

declare dso_local i32 @TRACE(i8*, i32*, i32**) #1

declare dso_local %struct.TYPE_10__* @CoTaskMemAlloc(i32) #1

declare dso_local i32 @ZeroMemory(%struct.TYPE_10__*, i32) #1

declare dso_local i32 @Parser_Create(%struct.TYPE_11__*, i32*, i32*, i32, i32, i32, i32, i32, i32, i32*, i32*, i32, i32*) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @CoTaskMemFree(%struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
